--- a/src/style.css
+++ b/src/style.css
@@ -27,3 +27,9 @@ html,body,#app{
 canvas{
   display: block;
 }
+
+.pixiCon {
+  height: 100%;
+  width: 100%;
+  background: url('@/assets/img/gridBg.png') repeat 56px 56px;
+}
